crates/fig-parser/tests/snapshots/integration_tests__control_flow__block_named.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: with_block
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Block:
              name: my_scope
              body:
                statements:
                  - Let:
                      annotations: []
                      name: x
                      ty: ~
                      value:
                        IntegerLiteral:
                          base: Decimal
                          digits: "10"
                          suffix: ~
                  - Let:
                      annotations: []
                      name: y
                      ty: ~
                      value:
                        IntegerLiteral:
                          base: Decimal
                          digits: "20"
                          suffix: ~
                  - Pass
