crates/fig-parser/tests/snapshots/integration_tests__control_flow__for_basic.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: sum_range
        generic_params: []
        self_param: ~
        params: []
        return_types:
          - Ok
      body:
        statements:
          - For:
              pattern: i
              iterable:
                Call:
                  callee:
                    Path:
                      segments:
                        - range
                      generic_args: []
                  args:
                    - IntegerLiteral:
                        base: Decimal
                        digits: "0"
                        suffix: ~
                    - IntegerLiteral:
                        base: Decimal
                        digits: "10"
                        suffix: ~
                  is_propagating: false
              body:
                statements:
                  - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: iterate_slice
        generic_params: []
        self_param: ~
        params:
          - name: data
            ty:
              Array:
                element_type: I32
                size: ~
        return_types:
          - Ok
      body:
        statements:
          - For:
              pattern: item
              iterable:
                Path:
                  segments:
                    - data
                  generic_args: []
              body:
                statements:
                  - Pass
