crates/fig-parser/tests/snapshots/integration_tests__control_flow__for_nested.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: nested_loops
        generic_params: []
        self_param: ~
        params:
          - name: n
            ty: USize
        return_types:
          - Ok
      body:
        statements:
          - For:
              pattern: i
              iterable:
                Call:
                  callee:
                    Path:
                      segments:
                        - range
                      generic_args: []
                  args:
                    - IntegerLiteral:
                        base: Decimal
                        digits: "0"
                        suffix: ~
                    - Path:
                        segments:
                          - n
                        generic_args: []
                  is_propagating: false
              body:
                statements:
                  - For:
                      pattern: j
                      iterable:
                        Call:
                          callee:
                            Path:
                              segments:
                                - range
                              generic_args: []
                          args:
                            - IntegerLiteral:
                                base: Decimal
                                digits: "0"
                                suffix: ~
                            - Path:
                                segments:
                                  - n
                                generic_args: []
                          is_propagating: false
                      body:
                        statements:
                          - Pass
