crates/fig-parser/tests/snapshots/integration_tests__control_flow__for_ptr_iteration.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: sum_ptr
        generic_params: []
        self_param: ~
        params:
          - name: ptr
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type: I32
          - name: len
            ty: USize
        return_types:
          - I32
      body:
        statements:
          - Mut:
              annotations: []
              name: total
              ty: ~
              value:
                IntegerLiteral:
                  base: Decimal
                  digits: "0"
                  suffix: ~
          - For:
              pattern: i
              iterable:
                Call:
                  callee:
                    Path:
                      segments:
                        - range
                      generic_args: []
                  args:
                    - IntegerLiteral:
                        base: Decimal
                        digits: "0"
                        suffix: ~
                    - Path:
                        segments:
                          - len
                        generic_args: []
                  is_propagating: false
              body:
                statements:
                  - Let:
                      annotations: []
                      name: val
                      ty: ~
                      value:
                        UnaryOp:
                          op: Dereference
                          operand:
                            Parenthesized:
                              BinaryOp:
                                lhs:
                                  Path:
                                    segments:
                                      - ptr
                                    generic_args: []
                                op: Add
                                rhs:
                                  Path:
                                    segments:
                                      - i
                                    generic_args: []
          - Return:
              Path:
                segments:
                  - total
                generic_args: []
