crates/fig-parser/tests/snapshots/integration_tests__control_flow__if_bool_conditions.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: bool_conditions
        generic_params: []
        self_param: ~
        params:
          - name: a
            ty: Bool
          - name: b
            ty: Bool
          - name: x
            ty: I32
        return_types:
          - Ok
      body:
        statements:
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: LogicalAnd
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: LogicalOr
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
          - If:
              condition:
                UnaryOp:
                  op: LogicalNot
                  operand:
                    Path:
                      segments:
                        - a
                      generic_args: []
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
          - If:
              condition:
                BinaryOp:
                  lhs:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - x
                          generic_args: []
                      op: GreaterThan
                      rhs:
                        BinaryOp:
                          lhs:
                            IntegerLiteral:
                              base: Decimal
                              digits: "0"
                              suffix: ~
                          op: LogicalAnd
                          rhs:
                            Path:
                              segments:
                                - x
                              generic_args: []
                  op: LessThan
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "100"
                      suffix: ~
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
          - If:
              condition:
                BinaryOp:
                  lhs:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - a
                          generic_args: []
                      op: LogicalAnd
                      rhs:
                        BinaryOp:
                          lhs:
                            UnaryOp:
                              op: LogicalNot
                              operand:
                                Path:
                                  segments:
                                    - b
                                  generic_args: []
                          op: LogicalOr
                          rhs:
                            Path:
                              segments:
                                - x
                              generic_args: []
                  op: Equal
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
