crates/fig-parser/tests/snapshots/integration_tests__control_flow__if_elif_else.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: sign
        generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - x
                      generic_args: []
                  op: GreaterThan
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
              then_body:
                statements:
                  - Return:
                      IntegerLiteral:
                        base: Decimal
                        digits: "1"
                        suffix: ~
              elif_clauses:
                - condition:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - x
                          generic_args: []
                      op: LessThan
                      rhs:
                        IntegerLiteral:
                          base: Decimal
                          digits: "0"
                          suffix: ~
                  body:
                    statements:
                      - Return:
                          UnaryOp:
                            op: Negate
                            operand:
                              IntegerLiteral:
                                base: Decimal
                                digits: "1"
                                suffix: ~
              else_body:
                statements:
                  - Return:
                      IntegerLiteral:
                        base: Decimal
                        digits: "0"
                        suffix: ~
