crates/fig-parser/tests/snapshots/integration_tests__control_flow__if_simple.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: check_positive
        generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - Ok
      body:
        statements:
          - If:
              condition:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - x
                      generic_args: []
                  op: GreaterThan
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
